@@ -225,28 +225,36 @@ public class DataTracker
     public void markCompacted(Collection<SSTableReader> sstables)
     {
         replace(sstables, Collections.<SSTableReader>emptyList());
+        notifySSTablesChanged(sstables, Collections.<SSTableReader>emptyList());
     }
 
     public void replaceCompactedSSTables(Collection<SSTableReader> sstables, Iterable<SSTableReader> replacements)
     {
         replace(sstables, replacements);
+        notifySSTablesChanged(sstables, replacements);
+    }
+
+    public void addInitialSSTables(Collection<SSTableReader> sstables)
+    {
+        replace(Collections.<SSTableReader>emptyList(), sstables);
+        // no notifications or backup necessary
     }
 
     public void addSSTables(Collection<SSTableReader> sstables)
     {
         replace(Collections.<SSTableReader>emptyList(), sstables);
-    }
-
-    public void addStreamedSSTable(SSTableReader sstable)
-    {
-        addSSTables(Arrays.asList(sstable));
-        incrementallyBackup(sstable);
-        notifyAdded(sstable);
+        for (SSTableReader sstable : sstables)
+        {
+            incrementallyBackup(sstable);
+            notifyAdded(sstable);
+        }
     }
 
     public void removeAllSSTables()
     {
-        replace(getSSTables(), Collections.<SSTableReader>emptyList());
+        List<SSTableReader> sstables = getSSTables();
+        replace(sstables, Collections.<SSTableReader>emptyList());
+        notifySSTablesChanged(sstables, Collections.<SSTableReader>emptyList());
     }
 
     /** (Re)initializes the tracker, purging all references. */
@@ -272,7 +280,6 @@ public class DataTracker
         addNewSSTablesSize(replacements);
         removeOldSSTablesSize(oldSSTables);
 
-        notifySSTablesChanged(replacements, oldSSTables);
         cfstore.updateCacheSizes();
     }
 
@@ -473,7 +480,7 @@ public class DataTracker
         return (double) falseCount / (trueCount + falseCount);
     }
 
-    public void notifySSTablesChanged(Iterable<SSTableReader> added, Iterable<SSTableReader> removed)
+    public void notifySSTablesChanged(Iterable<SSTableReader> removed, Iterable<SSTableReader> added)
     {
         for (INotificationConsumer subscriber : subscribers)
         {
