@@ -153,9 +153,10 @@ public class LeveledManifest
 
     public synchronized void promote(Iterable<SSTableReader> removed, Iterable<SSTableReader> added)
     {
+        assert !Iterables.isEmpty(removed); // use add() instead of promote when adding new sstables
         logDistribution();
         if (logger.isDebugEnabled())
-            logger.debug((Iterables.isEmpty(added) ? "Removing [" : "Replacing [") + toString(removed) + "]");
+            logger.debug("Replacing [" + toString(removed) + "]");
 
         // the level for the added sstables is the max of the removed ones,
         // plus one if the removed were all on the same level
